k8s-infra-apps/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: self-signed-ca-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://longhorn.k8s.local"
    gethomepage.dev/group: App
    gethomepage.dev/icon: longhorn.svg
    gethomepage.dev/name: Longhorn
spec:
  ingressClassName: nginx
  rules:
    - host: longhorn.k8s.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.k8s.local
      secretName: longhorn-tls-secret
